Separate test data into data/database folders
