# api/controllers/locations.go
@@ -1,6 +1,9 @@
 package controllers
 
-import "github.com/uug-ai/facial-access-control/api/models"
+import (
+	"github.com/uug-ai/facial-access-control/api/database"
+	"github.com/uug-ai/facial-access-control/api/models"
+)
 
 // Locations godoc
 // @Router /api/locations [get]
@@ -10,11 +13,25 @@ import "github.com/uug-ai/facial-access-control/api/models"
 // @Description Get all locations
 // @Success 200 {object} []models.Location
 func GetLocations() []models.Location {
-	// Generate random locations and return results
-	locations := []models.Location{
-		{Id: 1, Name: "Location 1", Address: "Address 1", Lat: 1.0, Lng: 1.0},
-		{Id: 2, Name: "Location 2", Address: "Address 2", Lat: 2.0, Lng: 2.0},
-		{Id: 3, Name: "Location 3", Address: "Address 3", Lat: 3.0, Lng: 3.0},
-	}
+	locations := database.GetLocations()
 	return locations
 }
+
+// Location godoc
+// @Router /api/locations/{id} [get]
+// @ID getLocation
+// @Tags locations
+// @Summary Get location by ID
+// @Description Get location by ID
+// @Param id path int true "Location ID"
+// @Success 200 {object} models.Location
+func GetLocation(id int) models.Location {
+	locations := database.GetLocations()
+	for _, location := range locations {
+		if location.Id == id {
+			return location
+		}
+	}
+	return models.Location{}
+}
+
